--- a/blogpost.html
+++ b/blogpost.html
@@ -6,5 +6,6 @@
     <body>
         <h1>Aquí vamos a hacer un blog post</h1>
         <p>Parrafo de inicio</p>
+        <p>Ajuste 1</p>
     </body>
 </HTMl:5>
