cambio en la resrructura HTML

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,6 +4,15 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
+        <div>
+            <div id = container>
+                <div id = cabecera>Cabecera</div>
+                <div id = post>
+                    <h1>Título interesante</h1>
+                    <p>Párrafo interesante</p>
+                </div>
+            </div>
+        </div>
         <h1>Aquí vamos a hacer un blog post</h1>
         <p>Parrafo de inicio</p>
         <p>Ajuste 1</p>
