finalizada la cabecera con diseño

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,15 +6,21 @@
     <body>
         <div>
             <div id = container>
-                <div id = cabecera>Cabecera</div>
+                <div id = cabecera>Cabecera de cambio 3</div>
                 <div id = post>
                     <h1>Título interesante</h1>
                     <p>Párrafo interesante</p>
+                <div id = post2>
+                    <h1>Título aburrido 2</h1>
+                    <p>Párrafo aburrido 2</p>
+                <div id = post3>
+                    <h1>Título entretenido 3</h1>
+                    <p>Párrafo entretenido 3</p>
                 </div>
             </div>
         </div>
-        <h1>Aquí vamos a hacer un blog post</h1>
-        <p>Parrafo de inicio</p>
+        <h1>Aquí van las conclusiones</h1>
+        <p>conclusiones</p>
         <p>Ajuste 1</p>
     </body>
 </HTMl:5>
