Ajuste en el Main

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,8 @@
     <body>
         <h1>Aquí vamos a hacer un blog post</h1>
         <p>Parrafo de inicio</p>
+        <p>Parrafo de inicio 2</p>
+        <p>Parrafo de inicio 3</p>
         <p>Ajuste 1</p>
     </body>
 </HTMl:5>
