cambios en la rama maestra

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,15 +4,9 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-<<<<<<< HEAD
-        <h1>Aquí vamos a hacer un blog post</h1>
-        <p>Parrafo de inicio</p>
-        <p>Parrafo de inicio 2</p>
-        <p>Parrafo de inicio 3</p>
-=======
         <div>
             <div id = container>
-                <div id = cabecera>Cabecera de cambio 3</div>
+                <div id = cabecera>Cabecera de cambio 555</div>
                 <div id = post>
                     <h1>Título interesante</h1>
                     <p>Párrafo interesante</p>
@@ -27,7 +21,6 @@
         </div>
         <h1>Aquí van las conclusiones</h1>
         <p>conclusiones</p>
->>>>>>> cabecera
         <p>Ajuste 1</p>
     </body>
-</HTMl:5>
+</HTMl:5>s
