cambie el título del blogspot
pr que quiero

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <HTMl:5>
     <head>
-        <title>Título de post</title>
+        <title>Título de post desde GITHIB</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
