--- a/blogpost.html
+++ b/blogpost.html
@@ -4,6 +4,9 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
+        <header>
+            <h1>Título del header</h1>
+        </header>
         <div>
             <div id = container>
                 <div id = cabecera>Cabecera de cambio 444</div>
