--- a/blogpost.html
+++ b/blogpost.html
@@ -7,23 +7,25 @@
         <header>
             <h1>Título del header</h1>
         </header>
-        <div>
-            <div id = container>
-                <div id = cabecera>Cabecera de cambio 444</div>
-                <div id = post>
-                    <h1>Título interesante</h1>
+        <main>
+            <section>
+                <article>
+                    <h2>Título interesante</h1>
                     <p>Párrafo interesante</p>
-                <div id = post2>
-                    <h1>Título aburrido 2</h1>
-                    <p>Párrafo aburrido 2</p>
-                <div id = post3>
-                    <h1>Título entretenido 3</h1>
+                </article>
+            </section>
+
+            <section>
+                <article>   
+                    <h3>Título entretenido 3</h1>
                     <p>Párrafo entretenido 3</p>
-                </div>
-            </div>
-        </div>
-        <h1>Aquí van las conclusiones</h1>
-        <p>conclusiones</p>
-        <p>Ajuste 1</p>
+                </article>
+            </section>
+        </main>
+        <footer>
+            <h2>Aquí van las conclusiones</h1>
+            <p>conclusiones</p>
+            <p>Ajuste 1</p>
+        </footer>
     </body>
 </HTMl:5>
