Se cambio la configuración del servidor a SSH

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
             <section>
                 <article>
                     <h2>Título interesante</h1>
-                    <p>Párrafo interesante</p>
+                    <p>Nuevo cambio usando ahora SSH</p>
                 </article>
             </section>
 
